--- a/svc-nginx-helloworld.yml
+++ b/svc-nginx-helloworld.yml
@@ -7,7 +7,7 @@ spec:
   ports:
   - port: 3000
     nodePort: 30303
-    targetPort: 80
+    targetPort: nodejs-port
     protocol: TCP
     name: http
   selector:
